--- a/main.html
+++ b/main.html
@@ -1,13 +1,72 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-</head>
-<body>
-    <!-- Write your code here -->
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</body>
- 
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap Carousel Example</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+      .carousel-control .glyphicon-chevron-left,
+      .carousel-control .glyphicon-chevron-right {
+        font-size: 2rem;
+        color: white;
+      }
+    </style>
+  </head>
+  <body class="p-3 m-0 border-0">
+    <!-- Carousel Start -->
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+
+        <div class="carousel-item first-slide">
+          <svg class="bd-placeholder-img d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg">
+            <rect width="100%" height="100%" fill="#777" />
+            <text x="50%" y="50%" fill="#555" dy=".3em" text-anchor="middle">First slide</text>
+          </svg>
+        </div>
+
+        <div class="carousel-item second-slide">
+          <svg class="bd-placeholder-img d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg">
+            <rect width="100%" height="100%" fill="#666" />
+            <text x="50%" y="50%" fill="#444" dy=".3em" text-anchor="middle">Second slide</text>
+          </svg>
+        </div>
+
+        <div class="carousel-item third-slide active">
+          <svg class="bd-placeholder-img d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg">
+            <rect width="100%" height="100%" fill="#555" />
+            <text x="50%" y="50%" fill="#333" dy=".3em" text-anchor="middle">Third slide</text>
+          </svg>
+        </div>
+
+        <div class="carousel-item fourth-slide">
+          <svg class="bd-placeholder-img d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg">
+            <rect width="100%" height="100%" fill="#444" />
+            <text x="50%" y="50%" fill="#222" dy=".3em" text-anchor="middle">Fourth slide</text>
+          </svg>
+        </div>
+
+        <div class="carousel-item fifth-slide">
+          <svg class="bd-placeholder-img d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg">
+            <rect width="100%" height="100%" fill="#333" />
+            <text x="50%" y="50%" fill="#111" dy=".3em" text-anchor="middle">Fifth slide</text>
+          </svg>
+        </div>
+
+      </div>
+
+      <!-- Controls -->
+      <button class="carousel-control-prev left carousel-control" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+        <span class="glyphicon-chevron-left" aria-hidden="true">&#10094;</span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next right carousel-control" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+        <span class="glyphicon-chevron-right" aria-hidden="true">&#10095;</span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- Carousel End -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" defer></script>
+  </body>
 </html>
