--- a/main.html
+++ b/main.html
@@ -57,11 +57,11 @@
 
       <!-- Controls -->
       <button class="carousel-control-prev left carousel-control" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-        <span class="glyphicon-chevron-left" aria-hidden="true">&#10094;</span>
+        <span class="glyphicon-chevron-left glyphicon" aria-hidden="true">&#10094;</span>
         <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next right carousel-control" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-        <span class="glyphicon-chevron-right" aria-hidden="true">&#10095;</span>
+        <span class="glyphicon-chevron-right glyphicon" aria-hidden="true">&#10095;</span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
